# algorithm_engineering

./: README.md
u0/: aufgabe.txt  aufgabe.txt~
u0/dot/: CMakeLists.txt  dot.cpp  dot.cpp~
u0/linked_list/: CMakeLists.txt  linked_list.cpp  linked_list.cpp~
u1/: aufgabe.txt  axpy.cpp
u2/: CMakeLists.txt  main.cpp  matmat.cpp  matmat.hpp
u3/: aufgabe.txt  aufgabe.txt~
u3/axpy/: CMakeLists.txt  axpy.cpp  axpy.cpp~
u3/matmat/: CMakeLists.txt  CMakeLists.txt~  aufgabe.txt  main.cpp  main.cpp~
u4/: aufgabe.txt
u4/matmat/: main.cpp  matmat.cpp  matmat.cpp~  matmat.hpp  matmat.hpp~
u4/philosophers/: CMakeLists.txt  build_gcc.sh  build_intel.sh  main.cpp
u5/: aufgabe.txt
u5/graph/: CMakeLists.txt  main.cpp  testgraph
u6/: aufgabe.txt  aufgabe.txt~
u6/MPI_hello_world/: CMakeLists.txt  build.sh  hello.cpp  hello.cpp~  machine_file  run.sh  run.sh~
u6/MPI_hello_world_omp/: build.sh  build.sh~  hello.cpp  hello.cpp~  run.sh
u6/pi/: CMakeLists.txt  CMakeLists.txt~  pi.cpp  pi.cpp~  run.sh
